--- a/exp/exp3/printinfo.ipynb
+++ b/exp/exp3/printinfo.ipynb
@@ -49,26 +49,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1069.0 &801.7 &826.4 &67.14\n",
-      "1079.0 &795.7 &758.8 &94.85\n",
-      "1009.0 &855.1 &817.6 &81.89\n",
-      "1037.0 &841.8 &769.0 &76.29\n",
-      "990.6 &784.6 &794.8 &49.37\n"
+      "1914.0 &463.9 &431.9 &30.2\n",
+      "1739.0 &454.5 &434.3 &48.67\n",
+      "1968.0 &452.0 &438.8 &50.61\n",
+      "1759.0 &457.5 &442.4 &51.21\n",
+      "1752.0 &477.2 &449.8 &53.01\n"
      ]
     }
    ],
    "source": [
     "with open('result/dbscan_real_timing/runtimeBFBanknote.npy', 'rb') as f:\n",
-    "    runtime_brute = np.load(f)\n",
+    "    runtime_brute = np.load(f).mean(axis=1)\n",
     "\n",
     "with open('result/dbscan_real_timing/runtimeKTBanknote.npy', 'rb') as f:\n",
-    "    runtime_kt = np.load(f)\n",
+    "    runtime_kt = np.load(f).mean(axis=1)\n",
     "\n",
     "with open('result/dbscan_real_timing/runtimeBTBanknote.npy', 'rb') as f:\n",
-    "    runtime_bt = np.load(f)\n",
+    "    runtime_bt = np.load(f).mean(axis=1)\n",
     "\n",
     "with open('result/dbscan_real_timing/runtimeSNNBanknote.npy', 'rb') as f:\n",
-    "    runtime_snn = np.load(f)\n",
+    "    runtime_snn = np.load(f).mean(axis=1)\n",
     "    \n",
     "T = np.vstack((runtime_brute, runtime_kt, runtime_bt, runtime_snn)).T\n",
     "print_sigificant_array(T[0])\n",
@@ -88,26 +88,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1206.0 &223.4 &200.9 &42.57\n",
-      "1238.0 &222.9 &206.2 &44.43\n",
-      "1240.0 &224.1 &200.7 &44.87\n",
-      "1279.0 &225.8 &252.2 &15.21\n",
-      "1250.0 &252.3 &216.1 &16.12\n"
+      "706.8 &138.8 &124.3 &86.81\n",
+      "654.0 &142.2 &127.8 &64.62\n",
+      "651.8 &139.2 &123.2 &63.74\n",
+      "650.7 &138.2 &121.5 &60.75\n",
+      "638.6 &138.4 &121.2 &58.17\n"
      ]
     }
    ],
    "source": [
     "with open('result/dbscan_real_timing/runtimeBFDermatology.npy', 'rb') as f:\n",
-    "    runtime_brute = np.load(f)\n",
+    "    runtime_brute = np.load(f).mean(axis=1)\n",
     "\n",
     "with open('result/dbscan_real_timing/runtimeKTDermatology.npy', 'rb') as f:\n",
-    "    runtime_kt = np.load(f)\n",
+    "    runtime_kt = np.load(f).mean(axis=1)\n",
     "\n",
     "with open('result/dbscan_real_timing/runtimeBTDermatology.npy', 'rb') as f:\n",
-    "    runtime_bt = np.load(f)\n",
+    "    runtime_bt = np.load(f).mean(axis=1)\n",
     "\n",
     "with open('result/dbscan_real_timing/runtimeSNNDermatology.npy', 'rb') as f:\n",
-    "    runtime_snn = np.load(f)\n",
+    "    runtime_snn = np.load(f).mean(axis=1)\n",
     "    \n",
     "    \n",
     "T = np.vstack((runtime_brute, runtime_kt, runtime_bt, runtime_snn)).T\n",
@@ -128,26 +128,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "123.8 &109.5 &107.2 &8.1\n",
-      "127.0 &114.0 &108.9 &7.818\n",
-      "123.2 &115.4 &113.5 &8.056\n",
-      "126.0 &109.9 &109.1 &9.799\n",
-      "124.9 &110.1 &107.8 &10.8\n"
+      "506.9 &116.0 &104.9 &7.674\n",
+      "491.9 &116.0 &105.2 &8.105\n",
+      "496.0 &116.5 &107.2 &9.263\n",
+      "500.9 &116.7 &105.1 &10.97\n",
+      "499.8 &116.3 &105.0 &11.39\n"
      ]
     }
    ],
    "source": [
     "with open('result/dbscan_real_timing/runtimeBFEcoli.npy', 'rb') as f:\n",
-    "    runtime_brute = np.load(f)\n",
+    "    runtime_brute = np.load(f).mean(axis=1)\n",
     "\n",
     "with open('result/dbscan_real_timing/runtimeKTEcoli.npy', 'rb') as f:\n",
-    "    runtime_kt = np.load(f)\n",
+    "    runtime_kt = np.load(f).mean(axis=1)\n",
     "\n",
     "with open('result/dbscan_real_timing/runtimeBTEcoli.npy', 'rb') as f:\n",
-    "    runtime_bt = np.load(f)\n",
+    "    runtime_bt = np.load(f).mean(axis=1)\n",
     "\n",
     "with open('result/dbscan_real_timing/runtimeSNNEcoli.npy', 'rb') as f:\n",
-    "    runtime_snn = np.load(f)\n",
+    "    runtime_snn = np.load(f).mean(axis=1)\n",
     "    \n",
     "T = np.vstack((runtime_brute, runtime_kt, runtime_bt, runtime_snn)).T\n",
     "print_sigificant_array(T[0])\n",
@@ -167,26 +167,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21530.0 &30560.0 &15420.0 &1952.0\n",
-      "21690.0 &30750.0 &15560.0 &1930.0\n",
-      "21670.0 &30810.0 &15700.0 &1814.0\n",
-      "21550.0 &30950.0 &15770.0 &1880.0\n",
-      "21590.0 &31160.0 &15930.0 &1955.0\n"
+      "3497.0 &17290.0 &7685.0 &926.9\n",
+      "3511.0 &17480.0 &7738.0 &954.1\n",
+      "3300.0 &17490.0 &7727.0 &937.9\n",
+      "3257.0 &17600.0 &7768.0 &975.2\n",
+      "3499.0 &17570.0 &7734.0 &1065.0\n"
      ]
     }
    ],
    "source": [
     "with open('result/dbscan_real_timing/runtimeBFPhoneme.npy', 'rb') as f:\n",
-    "    runtime_brute = np.load(f)\n",
+    "    runtime_brute = np.load(f).mean(axis=1)\n",
     "\n",
     "with open('result/dbscan_real_timing/runtimeKTPhoneme.npy', 'rb') as f:\n",
-    "    runtime_kt = np.load(f)\n",
+    "    runtime_kt = np.load(f).mean(axis=1)\n",
     "\n",
     "with open('result/dbscan_real_timing/runtimeBTPhoneme.npy', 'rb') as f:\n",
-    "    runtime_bt = np.load(f)\n",
+    "    runtime_bt = np.load(f).mean(axis=1)\n",
     "\n",
     "with open('result/dbscan_real_timing/runtimeSNNPhoneme.npy', 'rb') as f:\n",
-    "    runtime_snn = np.load(f)\n",
+    "    runtime_snn = np.load(f).mean(axis=1)\n",
     "\n",
     "T = np.vstack((runtime_brute, runtime_kt, runtime_bt, runtime_snn)).T\n",
     "print_sigificant_array(T[0])\n",
@@ -206,26 +206,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "97.27 &89.78 &87.16 &7.641\n",
-      "97.38 &90.03 &87.96 &7.514\n",
-      "94.76 &86.98 &63.6 &18.04\n",
-      "95.82 &66.65 &85.47 &6.083\n",
-      "96.04 &88.69 &88.0 &7.496\n"
+      "73.37 &64.02 &56.7 &5.753\n",
+      "64.65 &63.84 &56.29 &5.703\n",
+      "66.91 &63.26 &55.74 &5.612\n",
+      "67.29 &63.11 &56.34 &6.106\n",
+      "67.12 &63.45 &56.25 &6.094\n"
      ]
     }
    ],
    "source": [
     "with open('result/dbscan_real_timing/runtimeBFWine.npy', 'rb') as f:\n",
-    "    runtime_brute = np.load(f)\n",
+    "    runtime_brute = np.load(f).mean(axis=1)\n",
     "\n",
     "with open('result/dbscan_real_timing/runtimeKTWine.npy', 'rb') as f:\n",
-    "    runtime_kt = np.load(f)\n",
+    "    runtime_kt = np.load(f).mean(axis=1)\n",
     "\n",
     "with open('result/dbscan_real_timing/runtimeBTWine.npy', 'rb') as f:\n",
-    "    runtime_bt = np.load(f)\n",
+    "    runtime_bt = np.load(f).mean(axis=1)\n",
     "\n",
     "with open('result/dbscan_real_timing/runtimeSNNWine.npy', 'rb') as f:\n",
-    "    runtime_snn = np.load(f)\n",
+    "    runtime_snn = np.load(f).mean(axis=1)\n",
     "    \n",
     "T = np.vstack((runtime_brute, runtime_kt, runtime_bt, runtime_snn)).T\n",
     "print_sigificant_array(T[0])\n",
@@ -250,11 +250,19 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "613ecf79-c0b7-4b0a-a48f-ae77d86ea2fa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -268,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
