--- a/exp/exp3/real_cluster.ipynb
+++ b/exp/exp3/real_cluster.ipynb
@@ -59,20 +59,20 @@
     "eps = [0.1, 0.2, 0.3, 0.4, 0.5]\n",
     "seeds = np.arange(5)\n",
     "\n",
-    "runtime_brute = np.zeros((len(eps)))\n",
-    "runtime_kt = np.zeros((len(eps)))\n",
-    "runtime_bt = np.zeros((len(eps)))\n",
-    "runtime_snn = np.zeros((len(eps)))\n",
+    "runtime_brute = np.zeros((len(eps), len(seeds)))\n",
+    "runtime_kt = np.zeros((len(eps), len(seeds)))\n",
+    "runtime_bt = np.zeros((len(eps), len(seeds)))\n",
+    "runtime_snn = np.zeros((len(eps), len(seeds)))\n",
     "\n",
-    "for random_seed in seeds:\n",
-    "\n",
+    "for i in range(len(seeds)):\n",
+    "    random_seed = seeds[i]\n",
     "    for j in range(len(eps)):\n",
     "        bc = native_dbscan(eps=eps[j], algorithm='dbscan', query='brute')\n",
     "\n",
     "        st = time.time()\n",
     "        bc.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_brute[j] = et - st\n",
+    "        runtime_brute[j, i] = et - st\n",
     "        \n",
     "        \n",
     "        kt = native_dbscan(eps=eps[j], algorithm='dbscan', query='kd_tree')\n",
@@ -80,20 +80,20 @@
     "        st = time.time()\n",
     "        kt.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_kt[j] = et - st\n",
+    "        runtime_kt[j, i] = et - st\n",
     "\n",
     "        bt = native_dbscan(eps=eps[j], algorithm='dbscan', query='ball_tree')\n",
     "\n",
     "        st = time.time()\n",
     "        bt.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_bt[j] = et - st\n",
+    "        runtime_bt[j, i] = et - st\n",
     "\n",
     "        snn = snn_dbscan(eps=eps[j], algorithm='dbscan')\n",
     "        st = time.time()\n",
     "        snn.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_snn[j] = et - st\n",
+    "        runtime_snn[j, i] = et - st\n",
     "        \n",
     "        \n",
     "        \n",
@@ -146,20 +146,20 @@
     "eps = [5, 5.1, 5.2, 5.3, 5.4]\n",
     "seeds = np.arange(5)\n",
     "\n",
-    "runtime_brute = np.zeros((len(eps)))\n",
-    "runtime_kt = np.zeros((len(eps)))\n",
-    "runtime_bt = np.zeros((len(eps)))\n",
-    "runtime_snn = np.zeros((len(eps)))\n",
+    "runtime_brute = np.zeros((len(eps), len(seeds)))\n",
+    "runtime_kt = np.zeros((len(eps), len(seeds)))\n",
+    "runtime_bt = np.zeros((len(eps), len(seeds)))\n",
+    "runtime_snn = np.zeros((len(eps), len(seeds)))\n",
     "\n",
-    "for random_seed in seeds:\n",
-    "\n",
+    "for i in range(len(seeds)):\n",
+    "    random_seed = seeds[i]\n",
     "    for j in range(len(eps)):\n",
     "        bc = native_dbscan(eps=eps[j], algorithm='dbscan', minPts=15, query='brute')\n",
     "\n",
     "        st = time.time()\n",
     "        bc.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_brute[j] += et - st\n",
+    "        runtime_brute[j, i] += et - st\n",
     "        \n",
     "        \n",
     "        kt = native_dbscan(eps=eps[j], algorithm='dbscan', query='kd_tree')\n",
@@ -167,20 +167,20 @@
     "        st = time.time()\n",
     "        kt.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_kt[j] = et - st\n",
+    "        runtime_kt[j, i] = et - st\n",
     "\n",
     "        bt = native_dbscan(eps=eps[j], algorithm='dbscan', query='ball_tree')\n",
     "\n",
     "        st = time.time()\n",
     "        bt.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_bt[j] = et - st\n",
+    "        runtime_bt[j, i] = et - st\n",
     "\n",
     "        snn = snn_dbscan(eps=eps[j], algorithm='dbscan')\n",
     "        st = time.time()\n",
     "        snn.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_snn[j] = et - st\n",
+    "        runtime_snn[j, i] = et - st\n",
     "        \n",
     "        \n",
     "with open('result/dbscan_real_timing/runtimeBFDermatology.npy', 'wb') as f:\n",
@@ -227,20 +227,20 @@
     "eps = [0.5, 0.6, 0.7, 0.8, 0.9]\n",
     "seeds = np.arange(5)\n",
     "\n",
-    "runtime_brute = np.zeros((len(eps)))\n",
-    "runtime_kt = np.zeros((len(eps)))\n",
-    "runtime_bt = np.zeros((len(eps)))\n",
-    "runtime_snn = np.zeros((len(eps)))\n",
+    "runtime_brute = np.zeros((len(eps), len(seeds)))\n",
+    "runtime_kt = np.zeros((len(eps), len(seeds)))\n",
+    "runtime_bt = np.zeros((len(eps), len(seeds)))\n",
+    "runtime_snn = np.zeros((len(eps), len(seeds)))\n",
     "\n",
-    "for random_seed in seeds:\n",
-    "\n",
+    "for i in range(len(seeds)):\n",
+    "    random_seed = seeds[i]\n",
     "    for j in range(len(eps)):\n",
     "        bc = native_dbscan(eps=eps[j], algorithm='dbscan', query='brute')\n",
     "\n",
     "        st = time.time()\n",
     "        bc.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_brute[j] = et - st\n",
+    "        runtime_brute[j, i] = et - st\n",
     "        \n",
     "        \n",
     "        kt = native_dbscan(eps=eps[j], algorithm='dbscan', query='kd_tree')\n",
@@ -248,20 +248,20 @@
     "        st = time.time()\n",
     "        kt.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_kt[j] = et - st\n",
+    "        runtime_kt[j, i] = et - st\n",
     "\n",
     "        bt = native_dbscan(eps=eps[j], algorithm='dbscan', query='ball_tree')\n",
     "\n",
     "        st = time.time()\n",
     "        bt.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_bt[j] = et - st\n",
+    "        runtime_bt[j, i] = et - st\n",
     "\n",
     "        snn = snn_dbscan(eps=eps[j], algorithm='dbscan')\n",
     "        st = time.time()\n",
     "        snn.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_snn[j] = et - st \n",
+    "        runtime_snn[j, i] = et - st \n",
     "        \n",
     "with open('result/dbscan_real_timing/runtimeBFEcoli.npy', 'wb') as f:\n",
     "    np.save(f, runtime_brute)\n",
@@ -309,13 +309,14 @@
     "eps = [8.5, 8.6, 8.7, 8.8, 8.9]\n",
     "seeds = np.arange(5)\n",
     "\n",
-    "runtime_brute = np.zeros((len(eps)))\n",
-    "runtime_kt = np.zeros((len(eps)))\n",
-    "runtime_bt = np.zeros((len(eps)))\n",
-    "runtime_snn = np.zeros((len(eps)))\n",
+    "runtime_brute = np.zeros((len(eps), len(seeds)))\n",
+    "runtime_kt = np.zeros((len(eps), len(seeds)))\n",
+    "runtime_bt = np.zeros((len(eps), len(seeds)))\n",
+    "runtime_snn = np.zeros((len(eps), len(seeds)))\n",
     "\n",
-    "for random_seed in seeds:\n",
     "\n",
+    "for i in range(len(seeds)):\n",
+    "    random_seed = seeds[i]\n",
     "    for j in range(len(eps)):\n",
     "        bc = native_dbscan(eps=eps[j], algorithm='dbscan', minPts=15, query='brute')\n",
     "\n",
@@ -323,7 +324,7 @@
     "        bc.fit(xtrain)\n",
     "        et = time.time()\n",
     "        # print(\"bf runtime:\", et - st)\n",
-    "        runtime_brute[j] = et - st\n",
+    "        runtime_brute[j, i] = et - st\n",
     "        \n",
     "        \n",
     "        kt = native_dbscan(eps=eps[j], algorithm='dbscan', query='kd_tree')\n",
@@ -331,20 +332,20 @@
     "        st = time.time()\n",
     "        kt.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_kt[j] = et - st\n",
+    "        runtime_kt[j, i] = et - st\n",
     "\n",
     "        bt = native_dbscan(eps=eps[j], algorithm='dbscan', query='ball_tree')\n",
     "\n",
     "        st = time.time()\n",
     "        bt.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_bt[j] = et - st\n",
+    "        runtime_bt[j, i] = et - st\n",
     "\n",
     "        snn = snn_dbscan(eps=eps[j], algorithm='dbscan')\n",
     "        st = time.time()\n",
     "        snn.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_snn[j] = et - st\n",
+    "        runtime_snn[j, i] = et - st\n",
     "        \n",
     "        \n",
     "with open('result/dbscan_real_timing/runtimeBFPhoneme.npy', 'wb') as f:\n",
@@ -391,20 +392,20 @@
     "eps = [2.2, 2.3, 2.4, 2.5, 2.6]\n",
     "seeds = np.arange(5)\n",
     "\n",
-    "runtime_brute = np.zeros((len(eps)))\n",
-    "runtime_kt = np.zeros((len(eps)))\n",
-    "runtime_bt = np.zeros((len(eps)))\n",
-    "runtime_snn = np.zeros((len(eps)))\n",
+    "runtime_brute = np.zeros((len(eps), len(seeds)))\n",
+    "runtime_kt = np.zeros((len(eps), len(seeds)))\n",
+    "runtime_bt = np.zeros((len(eps), len(seeds)))\n",
+    "runtime_snn = np.zeros((len(eps), len(seeds)))\n",
     "\n",
-    "for random_seed in seeds:\n",
-    "\n",
+    "for i in range(len(seeds)):\n",
+    "    random_seed = seeds[i]\n",
     "    for j in range(len(eps)):\n",
     "        bc = native_dbscan(eps=eps[j], algorithm='dbscan', query='brute')\n",
     "\n",
     "        st = time.time()\n",
     "        bc.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_brute[j] = et - st\n",
+    "        runtime_brute[j, i] = et - st\n",
     "        \n",
     "        \n",
     "        kt = native_dbscan(eps=eps[j], algorithm='dbscan', query='kd_tree')\n",
@@ -412,20 +413,20 @@
     "        st = time.time()\n",
     "        kt.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_kt[j] = et - st\n",
+    "        runtime_kt[j, i] = et - st\n",
     "\n",
     "        bt = native_dbscan(eps=eps[j], algorithm='dbscan', query='ball_tree')\n",
     "\n",
     "        st = time.time()\n",
     "        bt.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_bt[j] = et - st\n",
+    "        runtime_bt[j, i] = et - st\n",
     "\n",
     "        snn = snn_dbscan(eps=eps[j], algorithm='dbscan')\n",
     "        st = time.time()\n",
     "        snn.fit(xtrain)\n",
     "        et = time.time()\n",
-    "        runtime_snn[j] = et - st\n",
+    "        runtime_snn[j, i] = et - st\n",
     "        \n",
     "        \n",
     "with open('result/dbscan_real_timing/runtimeBFWine.npy', 'wb') as f:\n",
@@ -469,7 +470,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -483,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
